--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "h2sr"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["jasondhli <jasondhli@tencent.com>"]
 edition = "2018"
 license = "	Apache-2.0"
@@ -16,7 +16,6 @@ tokio = { version = "1.4", features = ["full"] }
 http = "0.2"
 tokio-socks = "0.5"
 anyhow = "1.0"
-clap = "2.33"
 directories = "3.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
@@ -24,3 +23,5 @@ iprange = "0.6"
 ipnet = "2.3"
 ansi_term = "0.12"
 fdlimit = "0.2"
+protobuf = "2.23"
+once_cell = "1.7"
