--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 iprange = "0.6"
 ipnet = "2.3"
-ansi_term = "0.12"
+termcolor = "1.1"
 fdlimit = "0.2"
 protobuf = "2.23"
 once_cell = "1.7"
